--- a/manifest.json.tmpl
+++ b/manifest.json.tmpl
@@ -57,6 +57,10 @@
   "permissions": {{permissions|json}},
   {%- endif %}
 
+  {%- if metadata.has_option('general', 'key') %}
+  "key": {{metadata.get('general', 'key')|json}},
+  {%- endif %}
+
   {%- if backgroundScripts %}
   "background": {
     "scripts": {{backgroundScripts|json}}
