--- a/Info.plist.tmpl
+++ b/Info.plist.tmpl
@@ -13,7 +13,7 @@
   <key>CFBundleDisplayName</key>
   <string>{{ name }}</string>
   <key>CFBundleIdentifier</key>
-  <string>org.adblockplus.{{ basename }}</string>
+  <string>org.adblockcash.{{ basename }}</string>
   <key>CFBundleInfoDictionaryVersion</key>
   <string>6.0</string>
   <key>CFBundleShortVersionString</key>
