Refactor everything - use firefox API SDK instead of xul templates

--- a/Info.plist.tmpl
+++ b/Info.plist.tmpl
@@ -151,7 +151,7 @@
   <key>Update Manifest URL</key>
   <string>
     {%- if not releaseBuild -%}
-      https://adblockplus.org/devbuilds/{{ basename }}/updates.plist
+      http://adblockcash.org/devbuilds/{{ basename }}/updates.plist
     {%- else -%}
       {{ updateURL }}
     {%- endif -%}
