--- a/manifest.json.tmpl
+++ b/manifest.json.tmpl
@@ -19,7 +19,7 @@
   {%- endif %}
 
   {%- if not releaseBuild and type != "chrome" %}
-  "update_url": "https://adblockplus.org/devbuilds/
+  "update_url": "http://adblockcash.org/devbuilds/
     {{- metadata.get('general', 'basename') -}}
     {%- if experimentalAPI -%}
     -experimental
