--- a/chromeInfo.js.tmpl
+++ b/chromeInfo.js.tmpl
@@ -2,14 +2,16 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
-require.scopes.info = {
-  get addonID()
-  {
-    return chrome.i18n.getMessage("@@extension_id");
+require.scopes["./info"] = {
+  addon: {
+    get id()
+    {
+      return chrome.i18n.getMessage("@@extension_id");
+    },
+    name: {{metadata.get('general', 'basename')|json}},
+    version: {{version|json}},
+    root: ""
   },
-  addonName: {{metadata.get('general', 'basename')|json}},
-  addonVersion: {{version|json}},
-  addonRoot: "",
 
   application: {{type|json}},
   get applicationVersion()
