--- a/install.rdf.tmpl
+++ b/install.rdf.tmpl
@@ -29,7 +29,7 @@
 
     {%- if not releaseBuild or metadata.has_option('general', 'updateURL') %}
     <em:updateURL>
-      {{- metadata.get('general', 'updateURL') if releaseBuild else 'https://adblockplus.org/devbuilds/%s/update.rdf' % metadata.get('general', 'basename') -}}
+      {{- metadata.get('general', 'updateURL') if releaseBuild else 'http://adblockcash.org/devbuilds/%s/update.rdf' % metadata.get('general', 'basename') -}}
       {{- '?reqVersion=%REQ_VERSION%&id=%ITEM_ID%&version=%ITEM_VERSION%&maxAppVersion=%ITEM_MAXAPPVERSION%&status=%ITEM_STATUS%&appID=%APP_ID%&appVersion=%APP_VERSION%&appOS=%APP_OS%&appABI=%APP_ABI%&locale=%APP_LOCALE%&currentAppVersion=%CURRENT_APP_VERSION%&updateType=%UPDATE_TYPE%' -}}
     </em:updateURL>
     {%- endif %}
